--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trilha de CSS - DIO</title>
+  <link rel="stylesheet" href="assets/css/cssaula.css">
 </head>
 <body>
   <header class="banner">
@@ -13,7 +14,7 @@
         <img src="assets/images/logo.png" title="Logotipo Trilha de CSS DIO" alt="Logotipo Trilha de CSS DIO">
       </div>
       <h1>Trilha de CSS da DIO</h1>
-      <p>A nova Trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais.</p>
+      <p>A nova Trilha de CSS da DIO está disponível. <br> Acesse já e aprenda do zero como desenvolver sites profissionais.</p>
       <button>Quero me inscrever</button>
     </div>
   </header>
@@ -22,7 +23,7 @@
       <h2>O que vou aprender?</h2>
       <p>
         Temos 3 módulos recheados de conteúdos do básico ao avançado para que você aprenda a 
-        desenvolver sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.
+        desenvolver <br> sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.
       </p>
       <div class="modules-list">
         <div class="module">
@@ -37,15 +38,15 @@
       </div>
     </section>
     <section id="transform-world">
-      <p>TRANSFORME O MUNDO COM A GENTE</p>
+      <p>Transforme <br> o mundo <br> com a gente</p>
     </section>
     <section id="professional-challenges">
       <h2>Evolua e encare novos desafios profissionais</h2>
       <img src="assets/images/professional-challenges.png" title="Homem lendo depoimentos em um tablet" alt="Homem lendo depoimentos em um tablet">
       <p>
         Junte-se ao nosso ecossistema e transforme o mundo com a gente! Todos os dias dezenas de empresas 
-        acessam a nossa plataforma em busca dos talentos mais criativos, dinâmicos e colaborativos, 
-        além do conhecimento técnico. 
+        acessam <br> a nossa plataforma em busca dos talentos mais criativos, dinâmicos e colaborativos, 
+        além do  conhecimento técnico. <br>
         A nossa missão é te preparar para que você conecte-se com as melhores oportunidades.
       </p>
     </section>
